# shtick

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.sample.toml  pyproject.toml  settings.sample.toml  test_shtick.py  test_shtick.sh
src/shtick/: __init__.py  bench-intensive-opt-20250602-223501.out  bench-intensive-std-20250602-223632.out  bench-intensive-std-20250603-115421.out  bench.py  cli.py  commands.py  config.py  diag-optimized.txt  diag-standard.txt  display.py  generator.py  logger.py  performanc_diagnostic.py  security.py  settings.py  shells.py  shtick.py
